# mc859a-2025-s2

./: checked.json  load.py  pyproject.toml  requirements.txt  testes.ipynb
src/tramitacao/camara/data/: tipo_autor.json  tipo_proposicao.json
src/tramitacao/camara/models/: __init__.py  autor.py  proposicao.py  proposicoes.py  tipo_autor.py  tipo_proposicao.py  tramitacao.py
src/tramitacao/senado/models/: __init__.py  proposicao.py  proposicoes.py
